Added videos to projects 1 and 2

--- a/data/projects.json
+++ b/data/projects.json
@@ -32,7 +32,7 @@
           "project_type": "Personal",
           "project_status": "Completed",
           "project_source_code": "https://github.com/jadnell555/jadnell555.github.io",
-          "project_video_url": "",
+          "project_video_url": "https://youtu.be/LLqEHMgAA60",
           "project_images": [
             "assets/images/projectPictures/v1.5_portfolio1.png",
             "assets/images/projectPictures/v1.5_portfolio2.png",
@@ -56,7 +56,7 @@
           "project_type": "Personal",
           "project_status": "Completed",
           "project_source_code": "https://github.com/jadnell555/jadnell555.github.io",
-          "project_video_url": null,
+          "project_video_url": "https://youtu.be/YADnlbc2uzY",
           "project_images": [
             "assets/images/projectPictures/portfolio1.png",
             "assets/images/projectPictures/portfolio2.png",
